--- a/04_html+css/10_flexbox/01_flex.html
+++ b/04_html+css/10_flexbox/01_flex.html
@@ -40,13 +40,13 @@
                 값: auto, stretch, flex-start, flex-end, center
 
 
-            flex-direction: row; > 주축이 가로
+            flex-direction: row(행); > 주축이 가로
             justify-content:  주축(가로)
             align-items:      교차축(세로)
             align-content:    교차축
             align-self:       교차축
 
-            flex-direction: column(기본값); > 주축이 세로
+            flex-direction: column(기본값,열); > 주축이 세로
             justify-content:  교차축(세로)
             align-items:      주축(가로)
             align-content:    주축
