--- a/70_pf/dothome/daewooenc/index.html
+++ b/70_pf/dothome/daewooenc/index.html
@@ -17,7 +17,7 @@
             <!-- 네비게이션 -->
             <nav class="gnb">
                 <ul class="main">
-                    <li><a href="">회사소개</a>
+                    <li><a href="#">회사소개</a>
                         <ul class="sub">
                             <li><a href="">기업정보</a></li>
                             <li><a href="">지속가능경영</a></li>
@@ -25,7 +25,7 @@
                             <li><a href="">투자정보</a></li>
                         </ul>
                     </li>
-                    <li><a href="">사업분야</a>
+                    <li><a href="#">사업분야</a>
                         <ul class="sub">
                             <li><a href="">투목</a></li>
                             <li><a href="">플랜트</a></li>
@@ -33,7 +33,7 @@
                             <li><a href="">주택</a></li>
                         </ul>
                     </li>
-                    <li><a href="">홍보센터</a>
+                    <li><a href="#">홍보센터</a>
                         <ul class="sub">
                             <li><a href="">공고</a></li>
                             <li><a href="">CI/BI</a></li>
@@ -41,7 +41,7 @@
                             <li><a href="">기업광고</a></li>
                         </ul>
                     </li>
-                    <li><a href="">뉴스룸</a>
+                    <li><a href="#">뉴스룸</a>
                         <ul class="sub">
                             <li><a href="">공지</a></li>
                             <li><a href="">보도자료</a></li>
@@ -61,13 +61,33 @@
                 <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
             </ul>
         </div>
+
+        
         <!-- C: contents -->
         <div class="contents">
             <!-- 공지사항 갤러리 탭메뉴 -->
             <div class="tabs">
-                <div class="notice"></div>
-                <div class="gallery"></div>
-            </div><!-- // .tabs end -->
+                <!-- 탭1 -->
+                <input type="radio" name="tab" id="tab1" checked>
+                <label for="tab1">공지사항</label>
+                <div class="tab1 tab-content">
+                    <ul>
+                        <li><a href="#">개포 우성 7차 최상의 조건으로 수주 출사표</a>2025.05.30</li>
+                        <li><a href="#">서울국제정원박람회서 ‘푸르지오 정원’ 선보여</a>2025.05.29</li>
+                        <li><a href="#">투르크메니스탄 미네랄 비료플랜트 본계약 체결</a>2025.05.26</li>
+                        <li><a href="#">정원주 회장, 인도네시아 프라보워 대통령 예방</a>2025.05.22</li>
+                    </ul>
+                </div>
+
+                <!-- 탭2 -->
+                <input type="radio" name="tab" id="tab2">
+                <label for="tab2">갤러리</label>
+                <div class="tab2 tab-content">
+                    <a href="#"><img src="images/gallery1.png" alt="갤러리1"></a>
+                    <a href="#"><img src="images/gallery2.png" alt="갤러리2"></a>
+                    <a href="#"><img src="images/gallery3.png" alt="갤러리3"></a>
+                </div>
+            </div><!-- .tabs end -->
             <!-- 배너 -->
             <div class="banner">
                 <a href="#"><img src="images/banner.png" alt="배너"></a>
@@ -76,11 +96,13 @@
             <div class="link">
                 <a href="#"><img src="images/link.png" alt="링크"></a>
             </div>
-        </div>
+        </div><!-- contents .end -->
         <!-- D: footer -->
         <footer>
             <!-- 하단로고 -->
-            <div class="blogo"><img src="images/blogo.png" alt="하단로고"></div>
+            <div class="blogo">
+                <img src="images/blogo.png" alt="하단로고">
+            </div>
             <!-- 저작권 -->
             <div class="copy">
                 <p>04548 서울특별시 중구 을지로 170 ㈜대우건설 대표번호 : 02-2288-3114</p>
@@ -90,7 +112,7 @@
             <div class="sns">
                 <ul>
                     <li><a href="#"><img src="images/facebook.png" alt="페이스북"></a></li>
-                    <li><a href=""#><img src="images/blog.png" alt="블로그"></a></li>
+                    <li><a href="" #><img src="images/blog.png" alt="블로그"></a></li>
                     <li><a href="#"><img src="images/kakaotalk.png" alt="카카오톡"></a></li>
                     <li><a href="#"><img src="images/youtube.png" alt="유튜브"></a></li>
                 </ul>
