--- a/70_pf/dothome/daewooenc/index.html
+++ b/70_pf/dothome/daewooenc/index.html
@@ -19,34 +19,34 @@
                 <ul class="main">
                     <li><a href="#">회사소개</a>
                         <ul class="sub">
-                            <li><a href="">기업정보</a></li>
-                            <li><a href="">지속가능경영</a></li>
-                            <li><a href="">R&D</a></li>
-                            <li><a href="">투자정보</a></li>
+                            <li><a href="#">기업정보</a></li>
+                            <li><a href="#">지속가능경영</a></li>
+                            <li><a href="#">R&D</a></li>
+                            <li><a href="#">투자정보</a></li>
                         </ul>
                     </li>
                     <li><a href="#">사업분야</a>
                         <ul class="sub">
-                            <li><a href="">투목</a></li>
-                            <li><a href="">플랜트</a></li>
-                            <li><a href="">건축개발</a></li>
-                            <li><a href="">주택</a></li>
+                            <li><a href="#">투목</a></li>
+                            <li><a href="#">플랜트</a></li>
+                            <li><a href="#">건축개발</a></li>
+                            <li><a href="#">주택</a></li>
                         </ul>
                     </li>
                     <li><a href="#">홍보센터</a>
                         <ul class="sub">
-                            <li><a href="">공고</a></li>
-                            <li><a href="">CI/BI</a></li>
-                            <li><a href="">브로슈어</a></li>
-                            <li><a href="">기업광고</a></li>
+                            <li><a href="#">공고</a></li>
+                            <li><a href="#">CI/BI</a></li>
+                            <li><a href="#">브로슈어</a></li>
+                            <li><a href="#">기업광고</a></li>
                         </ul>
                     </li>
                     <li><a href="#">뉴스룸</a>
                         <ul class="sub">
-                            <li><a href="">공지</a></li>
-                            <li><a href="">보도자료</a></li>
-                            <li><a href="">임직원 이야기</a></li>
-                            <li><a href="">사보</a></li>
+                            <li><a href="#">공지</a></li>
+                            <li><a href="#">보도자료</a></li>
+                            <li><a href="#">임직원 이야기</a></li>
+                            <li><a href="#">사보</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -61,8 +61,15 @@
                 <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
             </ul>
         </div>
+        <!-- 팝업창 -->
+        <div id="popup" class="popup">
+            <div class="popup_content">
+                <h3>개포 우성 7차 최상의 조건으로 수주 출사표</h3>
+                <p> 대우건설은 오는 6월 19일 입찰 마감을 앞두고 있는 개포 우성 7차 재건축 사업에 최근 내부 검토를 마치고 최상의 사업조건으로 참여하기로 출사표를 던졌다. 대우건설은 김보현 대표이사가 개포 우성 7차 재건축 사업의 입찰 과정 전반을 진두지휘하며 전사적인 역량을 총동원할 것이라며, “취임 이후 처음으로 하이엔드 브랜드인 써밋(SUMMIT)을 적용하는 만큼 최고의 주거명작을 선보이겠다”는 강력한 의지를 피력했다고 전했다. </p>
+                <div class="outer_btn"><a href="#" class="close_btn">&times 닫기</a></div>
+            </div>
+        </div><!-- 팝업창 end -->
 
-        
         <!-- C: contents -->
         <div class="contents">
             <!-- 공지사항 갤러리 탭메뉴 -->
@@ -72,7 +79,7 @@
                 <label for="tab1">공지사항</label>
                 <div class="tab1 tab-content">
                     <ul>
-                        <li><a href="#">개포 우성 7차 최상의 조건으로 수주 출사표</a>2025.05.30</li>
+                        <li><a href="#popup">개포 우성 7차 최상의 조건으로 수주 출사표</a>2025.05.30</li>
                         <li><a href="#">서울국제정원박람회서 ‘푸르지오 정원’ 선보여</a>2025.05.29</li>
                         <li><a href="#">투르크메니스탄 미네랄 비료플랜트 본계약 체결</a>2025.05.26</li>
                         <li><a href="#">정원주 회장, 인도네시아 프라보워 대통령 예방</a>2025.05.22</li>
@@ -101,7 +108,7 @@
         <footer>
             <!-- 하단로고 -->
             <div class="blogo">
-                <img src="images/blogo.png" alt="하단로고">
+                <a href="#"><img src="images/blogo.png" alt="하단로고"></a>
             </div>
             <!-- 저작권 -->
             <div class="copy">
@@ -112,7 +119,7 @@
             <div class="sns">
                 <ul>
                     <li><a href="#"><img src="images/facebook.png" alt="페이스북"></a></li>
-                    <li><a href="" #><img src="images/blog.png" alt="블로그"></a></li>
+                    <li><a href="#" #><img src="images/blog.png" alt="블로그"></a></li>
                     <li><a href="#"><img src="images/kakaotalk.png" alt="카카오톡"></a></li>
                     <li><a href="#"><img src="images/youtube.png" alt="유튜브"></a></li>
                 </ul>
