--- a/70_pf/dothome/haeundae/index.html
+++ b/70_pf/dothome/haeundae/index.html
@@ -10,24 +10,7 @@
 
 <body>
     <div class="wrap">
-        <header>
-            <h1><a href="#"><img src="images/logo.png" alt="로고"></a></h1>
-            <nav>
-                <ul>
-                    <li><a href="#">축제소개</a>
-                        <ul class="sub">
-                            <li><a href="#">환영인사</a></li>
-                            <li><a href="#">축제개요</a></li>
-                            <li><a href="#">오시는길안내</a></li>
-                            <li><a href="#">교통안내</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">축제정보</a></li>
-                    <li><a href="#">자료마당</a></li>
-                    <li><a href="#">열린마당</a></li>
-                </ul>
-            </nav>
-        </header><!-- header.end -->
+        <header></header><!-- header.end -->
         <div class="container">
             <!-- 슬라이드 -->
             <div class="slide">
