--- a/70_pf/dothome/haeundae/index.html
+++ b/70_pf/dothome/haeundae/index.html
@@ -10,7 +10,43 @@
 
 <body>
     <div class="wrap">
-        <header></header><!-- header.end -->
+        <header>
+            <!-- 로고 -->
+            <h1 class="logo"><a href="#"><img src="images/logo.png" alt="로고"></a></h1>
+            <!-- 네비게이션 -->
+            <nav class="gnb">
+                <ul class="main">
+                    <li><a href="#">축제소개</a>
+                        <ul class="sub">
+                            <li><a href="#">환영인사</a></li>
+                            <li><a href="#">축제개요</a></li>
+                            <li><a href="#">오시는길안내</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">축제정보</a>
+                        <ul class="sub">
+                            <li><a href="#">축제장배치도</a></li>
+                            <li><a href="#">축제일정표</a></li>
+                            <li><a href="#">이벤트</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">자료마당</a>
+                        <ul class="sub">
+                            <li><a href="#">보도자료</a></li>
+                            <li><a href="#">자료실</a></li>
+                            <li><a href="#">포토갤러리</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">열린마당</a>
+                        <ul class="sub">
+                            <li><a href="#">알림글</a></li>
+                            <li><a href="#">자주묻는질문</a></li>
+                            <li><a href="#">문의사항안내</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <div class="container">
             <!-- 슬라이드 -->
             <div class="slide">
