--- a/70_pf/dothome/nongshim/index.html
+++ b/70_pf/dothome/nongshim/index.html
@@ -20,20 +20,39 @@
                 .gnb>nav>ul>li*4>a[href="#"]^^div>a[href="#"]*2
             -->
 
-            <div class="gnb">
-                <nav>
-                    <ul>
-                        <li><a href="#">농심소개</a></li>
-                        <li><a href="#">홍보센터</a></li>
-                        <li><a href="#">오픈이노베이션</a></li>
-                        <li><a href="#">고객서비스</a></li>
-                    </ul>
-                </nav>
-                <div class="spotmenu">
-                    <a href="#">N.LIVE</a>
-                    <a href="#">농심mall</a>
-                </div>
-            </div>
+            <nav class="gnb">
+                <ul class="main">
+                    <li><a href="#">농심소개</a>
+                        <ul class="sub">
+                            <li><a href="#">CI소개</a></li>
+                            <li><a href="#">연혁</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">홍보센터</a>
+                        <ul class="sub">
+                            <li><a href="#">농시미 이벤트</a></li>
+                            <li><a href="#">농심소식</a></li>
+                            <li><a href="#">농심TV</a></li>
+                            <li><a href="#">글로벌 푸드 뉴스</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">오픈이노베이션</a>
+                        <ul class="sub">
+                            <li><a href="#">소개</a></li>
+                            <li><a href="#">스타트업 안내</a></li>
+                            <li><a href="#">지원하기</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">고객서비스</a>
+                        <ul class="sub">
+                            <li><a href="#">고객센터</a></li>
+                            <li><a href="#">자주묻는질문</a></li>
+                            <li><a href="#">견학신청</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <!-- 오른쪽 영역 -->
