--- a/70_pf/dothome/nongshim/index.html
+++ b/70_pf/dothome/nongshim/index.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+    <!-- 모달 -->
+    <div class="modal">
+        <div class="popup">
+            <h2>농심 신라면 툼바, 일본서 초도물량 100만 개 완판</h2>
+            <p>
+                농심이 일본 현지에 선보인 ‘신라면 툼바’ 초도물량 약 100만 개가 출시 2주 만에 모두 판매됐다. 농심은 지난 4월 일본 CVS 1위 유통업체 ‘세븐일레븐’에 신라면 툼바 용기면을
+                출시했다. 출시 당시 한국 히트 제품으로 주목받으며 전점에 입점됐던 신라면 툼바는, 출시 직후 일부 매장에서 결품이 발생하는 등 예상을 뛰어넘는 소비자 반응으로 빠르게 완판됐다. 농심은
+                추가 공급과 물량 확대를 위해 일본 세븐일레븐과 협의 중이다. 농심 관계자는 “신라면 툼바는 일본 라면시장에서 드문 차별화된 맛과, 전자레인지 조리로 구현한 파스타 스타일의 면과 소스로
+                큰 호응을 얻고 있다”라고 말했다.
+            </p>
+            <div><a href="#">&times; 닫기</a></div>
+        </div>
+    </div><!-- //.modal end -->
     <!-- 상단 영역 -->
     <div class="wrap">
         <!-- 헤더 영역 -->
