--- a/70_pf/dothome/daewooenc/navjs.html
+++ b/70_pf/dothome/daewooenc/navjs.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>대우건설_Nav_JQ</title>
+    <script src="script/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="script/script.js"></script>
     <style>
-        
+        /* 공통 */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font: 15px/1.6 '굴림', sans-serif;
+            background: #fff;
+            color: #333;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        a {
+            text-decoration: none;
+            color: #333;
+        }
+
+        img {
+            vertical-align: top;
+        }
+
+        /* 임시 */
+        nav * {
+            /* outline: 1px solid lime; */
+        }
+
+        /* 1dep */
+        .main {
+            display: flex;
+            text-align: center;
+            justify-content: end;
+            margin-right: 10px;
+        }
+
+        .main li {
+            width: 160px;
+        }
+
+        .main>li>a {
+            display: block;
+            font-size: 18px;
+            font-weight: bold;
+            background: #333;
+            color: #999;
+            padding: 10px;
+        }
+
+        .main>li>a:hover {
+            background: blue;
+            color: #fff;
+        }
+
+        /* 2dep */
+        .sub {
+            /* height: 0;
+            opacity: 0;
+            visibility: hidden; */
+            display: none;
+            height: 150px;
+            background: rgba(0, 0, 0, 0.5);
+            line-height: 30px;
+            /* transition: .3s; */
+            /* display는 transition 적용 x */
+        }
+
+        .sub a {
+            display: block;
+            color: #fff;
+        }
+
+        .sub a:hover {
+            background: #fff;
+            color: #333;
+        }
+
+        /* .main:hover .sub {
+            height: 150px;
+            opacity: 1;
+            visibility: visible;
+        } */
+        /* 내비게이션 */
     </style>
 </head>
+
 <body>
     <!-- header>h1.logo>a>img^^nav.gnb>ul.main>li*4>a[href]+ul.sub>li*4>a[href] -->
     <header>
@@ -57,4 +147,5 @@
         </nav>
     </header>
 </body>
+
 </html>
