--- a/70_pf/dothome/daewooenc/index.html
+++ b/70_pf/dothome/daewooenc/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>대우건설</title>
+    <!-- 1.css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- 2.제이쿼리 라이브러리 -->
+    <script src="script/jquery-1.12.4.js"></script>
+    <!-- 3.제이쿼리 사용자제작링크 -->
+    <script src="script/script.js"></script>
 </head>
 
 <body>
