--- a/70_pf/dothome/bluebottle/index.html
+++ b/70_pf/dothome/bluebottle/index.html
@@ -6,48 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>블루보틀 - BLUE BOTTLE COFFEE KOREA</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="script/jquery-1.12.4.js"></script>
+    <script src="script/script.js"></script>
 </head>
 
 <body>
     <!-- A: header -->
     <header>
         <div class="inner">
-            <h1 class="logo">
-                <a href="#"><img src="images/logo.png" alt="블루보틀"></a>
-            </h1>
-            <nav>
+            <div class="nav_bg"></div>
+            <!-- 로고 -->
+            <h1 class="logo"><a href="#"><img src="images/logo.png" alt="로고"></a></h1>
+            <!-- 네비게이션 -->
+            <nav class="gnb">
                 <ul class="main">
                     <li><a href="#">쇼핑</a>
                         <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
+                            <li><a href="#">커피</a></li>
+                            <li><a href="#">컵과 텀블러</a></li>
+                            <li><a href="#">브루잉 도구</a></li>
+                            <li><a href="#">라이프 스타일</a></li>
                         </ul>
                     </li>
                     <li><a href="#">베스트셀러</a>
                         <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">세트</a>
-                        <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
+                            <li><a href="#">원두</a></li>
+                            <li><a href="#">선물세트</a></li>
+                            <li><a href="#">텀블러</a></li>
+                            <li><a href="#">브루잉 도구</a></li>
                         </ul>
                     </li>
                     <li><a href="#">카페</a>
                         <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
+                            <li><a href="#">브랜드 소개</a></li>
+                            <li><a href="#">카페 찾기</a></li>
+                            <li><a href="#">브루잉 가이드</a></li>
+                            <li><a href="#">블로그</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">소식</a>
+                        <ul class="sub">
+                            <li><a href="#">공지</a></li>
+                            <li><a href="#">보도자료</a></li>
+                            <li><a href="#">임직원 이야기</a></li>
+                            <li><a href="#">사보</a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
-        </div><!-- .inner e -->
+        </div>
     </header>
 
     <div class="container">
