--- a/70_pf/dothome/karts/index.html
+++ b/70_pf/dothome/karts/index.html
@@ -14,10 +14,7 @@
 
     <!-- header -->
     <header>
-        <h1 class="logo"><a href="#"><img src="images/logo.png" alt="로고
-            
-            
-            "></a></h1>
+        <h1 class="logo"><a href="#"><img src="images/logo.png" alt="로고"></a></h1>
         <nav class="gnb">
             <ul class="main">
                 <li>
