--- a/70_pf/dothome/haeundae copy/index.html
+++ b/70_pf/dothome/haeundae copy/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>해운대 빛축제</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="./script/script.js"></script>
     <script src="./script/jquery-1.12.4.js"></script>
+    <script src="./script/script.js"></script>
 </head>
 
 <body>
@@ -84,25 +84,54 @@
                     </div>
                 </div>
                 <!-- 배너 -->
-                <div class="banner"></div>
+                <div class="banner">
+                    <a href="#"><img src="images/banner.png" alt="배너"></a>
+                </div>
                 <!-- 바로가기 링크 -->
-                <div class="link"></div>
+                <div class="link">
+                    <a href="#"><img src="images/link.png" alt="바로가기링크"></a>
+                </div>
             </div><!-- .contents end -->
             <!-- 푸터 -->
             <footer>
                 <!-- 하단로고 -->
-                <div class="blogo"></div>
+                <div class="blogo">
+                    <a href="#"><img src="images/blogo.png" alt="로고"></a>
+                </div>
                 <!-- 하단메뉴/저작권 -->
                 <div class="right">
                     <!-- 하단메뉴 -->
-                    <div class="bmenu"></div>
+                    <div class="bmenu">
+                        <ul>
+                            <li><a href="#">전화번호안내</a></li>
+                            <li><a href="#">개인정보처리방침</a></li>
+                            <li><a href="#">저작권보호정책</a></li>
+                            <li><a href="#">찾아오시는길</a></li>
+                        </ul>
+                    </div>
                     <!-- 주소 및 저작권 -->
-                    <div class="copy"></div>
+                    <div class="copy">
+                        <p>48095 부산광역시 해운대구 중동2로 11(중동) 대표전화 : (051)749-4000 팩스 : (051)749-4444</p>
+                        <p>Copyright© 2019 Haeundae-gu. All rights reserved.</p>
+                    </div>
                 </div>
             </footer><!-- footer end -->
         </div><!-- .container end -->
+        <div class="modal">
+            <div class="popup">
+                <h3>해운대 빛축제 일정안내</h3>
+                <p>점등시간 : 17:30~24:00 <br>
+                    축제기간 : 2024. 12. 14.(토) ~ 2025. 2. 2.(일) 51일간 <br>
+                    2025카운트다운: '24.12.31. 23:00 ~ '25.1.1. 01:00 <br>
+                    장 소 : 해운대해수욕장, 구남로, 해운대시장, 해운대온천길 일원 <br>
+                    행사주제 : ‘새로운 물결, 눈부신 파도’(NEW WAVE SNOW WAVE) <br>
+                    주요내용 : 눈빛정원, 반응형 씰링, 미디어아트, 체험프로그램, 빛놀이터 등 <br>
+                    주최 주관 : 해운대구
+                </p>
+                <div><a href="#">&times; 닫기</a></div>
+            </div>
+        </div>
     </div><!-- .wrap end -->
-
 </body>
 
 </html>
