--- a/70_pf/dothome/volkswagen/index.html
+++ b/70_pf/dothome/volkswagen/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>한국종합예술학교</title>
+    <title>폭스바겐</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="script/jquery-3.7.1.min.js"></script>
     <script src="script/script.js"></script>
@@ -12,190 +12,183 @@
 
 <body>
 
-    <!-- header -->
-    <header>
-        <div class="nav_bg"></div>
-        <h1 class="logo">
-            <a href="#"><img src="images/logo.png" alt="한국예술종합학교"></a>
-        </h1>
-        <nav>
-            <ul class="main">
-                <li><a href="#">전기차</a>
-                    <ul class="sub">
-                        <li><a href="#">모델</a></li>
-                        <li><a href="#">충전</a></li>
-                        <li><a href="#">기술과 배터리</a></li>
-                        <li><a href="#">지속가능성</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">테크놀로지</a>
-                    <ul class="sub">
-                        <li><a href="#">운전자 보조 시스템</a></li>
-                        <li><a href="#">안전 및 편의 사양</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">서비스</a>
-                    <ul class="sub">
-                        <li><a href="#">서비스 및 부품</a></li>
-                        <li><a href="#">내차서비스</a></li>
-                        <li><a href="#">액세서리</a></li>
-                        <li><a href="#">1:1 문의</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">소식</a>
-                    <ul class="sub">
-                        <li><a href="#">뉴스</a></li>
-                        <li><a href="#">프로모션</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- slide -->
-    <div class="slide">
-        <ul>
-            <li>
-                <a href="#"><img src="images/slide1.png" alt="슬라이드1"></a>
-            </li>
-            <li>
-                <a href="#"><img src="images/slide2.png" alt="슬라이드2"></a>
-            </li>
-            <li>
-                <a href="#"><img src="images/slide3.png" alt="슬라이드3"></a>
-            </li>
-            <li>
-                <a href="#"><img src="images/slide1.png" alt="슬라이드1"></a>
-            </li>
-        </ul>
-    </div><!-- div.slide end -->
-
-    <!-- contents -->
-    <div class="contents">
-
-        <!-- link -->
-        <div class="link">
-            <a href="#">
-                <img src="images/link1.png" alt="My Volkswagen App">
-                <span>My Volkswagen App</span>
-            </a>
-            <a href="#">
-                <img src="images/link2.png" alt="온라인 서비스 예약">
-                <span>온라인 서비스 예약</span>
-            </a>
-            <a href="#">
-                <img src="images/link3.png" alt="사고 수리 온라인 견적">
-                <span>사고 수리 온라인 견적</span>
-            </a>
-            <a href="#">
-                <img src="images/link4.png" alt="서비스 및 부품">
-                <span>서비스 및 부품</span>
-            </a>
-            <a href="#">
-                <img src="images/link5.png" alt="시승신청">
-                <span>시승신청</span>
-            </a>
-        </div>
-
-        <!-- banner -->
-        <div class="banner">
-            <div class="cont">
-                <img src="images/banner.png" alt="배너">
-                <div>
-                    <h2>폭스바겐 공식 서비스</h2>
-                    <p>저희 공식 서비스는 순정 부품과 제조사 매뉴얼을 통한 수리로 고객님의 폭스바겐을 위한 최적화된 서비스를 제공하고 있습니다. <br> 폭스바겐 맞춤형 부품과 수리로 안전하고
-                        편안한
-                        주행을 즐겨 보십시오.</p>
-                </div>
-            </div>
-            <div class="btn">
-                <a href="#"><img src="images/button.png" alt="바로가기버튼"></a>
-            </div>
-        </div>
-
-        <!-- notice and gallery -->
-        <div class="noga">
-
-            <!-- notice -->
-            <div class="notice">
-                <h2>공지사항</h2>
-                <ul>
-                    <li>
-                        <a href="#">Drive the legend. 신형 GTI 출시</a>
-                        <span>2025.05.05</span>
+    <div class="wrap">
+        <!-- header -->
+        <header>
+            <div class="nav_bg"></div>
+            <h1 class="logo">
+                <a href="#"><img src="images/logo.png" alt="한국예술종합학교"></a>
+            </h1>
+            <nav>
+                <ul class="main">
+                    <li><a href="#">전기차</a>
+                        <ul class="sub">
+                            <li><a href="#">모델</a></li>
+                            <li><a href="#">충전</a></li>
+                            <li><a href="#">기술과 배터리</a></li>
+                            <li><a href="#">지속가능성</a></li>
+                        </ul>
                     </li>
-                    <li>
-                        <a href="#">폭스바겐 순수 전기 쿠페 SUV 출시</a>
-                        <span>2025.01.05</span>
+                    <li><a href="#">테크놀로지</a>
+                        <ul class="sub">
+                            <li><a href="#">운전자 보조 시스템</a></li>
+                            <li><a href="#">안전 및 편의 사양</a></li>
+                        </ul>
                     </li>
-                    <li>
-                        <a href="#">Timeless icon, 새로운 골프 출시</a>
-                        <span>2024.12.05</span>
+                    <li><a href="#">서비스</a>
+                        <ul class="sub">
+                            <li><a href="#">서비스 및 부품</a></li>
+                            <li><a href="#">내차서비스</a></li>
+                            <li><a href="#">액세서리</a></li>
+                            <li><a href="#">1:1 문의</a></li>
+                        </ul>
                     </li>
-                    <li>
-                        <a href="#">폭스바겐의 첫 번째 순수 전기 SUV</a>
-                        <span>2024.10.05</span>
+                    <li><a href="#">소식</a>
+                        <ul class="sub">
+                            <li><a href="#">뉴스</a></li>
+                            <li><a href="#">프로모션</a></li>
+                        </ul>
                     </li>
                 </ul>
-            </div>
-
-            <!-- gallery -->
-            <div class="gallery">
-                <h2>갤러리</h2>
-                <div class="inner">
+            </nav>
+        </header>
+        <!-- slide -->
+        <div class="slide">
+            <ul>
+                <li>
+                    <a href="#"><img src="images/slide1.png" alt="슬라이드1"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/slide2.png" alt="슬라이드2"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/slide3.png" alt="슬라이드3"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/slide1.png" alt="슬라이드1"></a>
+                </li>
+            </ul>
+        </div><!-- div.slide end -->
+        <div class="absolute">
+            <!-- contents -->
+            <div class="contents">
+                <!-- link -->
+                <div class="link">
                     <a href="#">
-                        <img src="images/gallery1.png" alt="전시장 찾기"><br>
-                        <span>전시장 찾기</span>
+                        <img src="images/link1.png" alt="My Volkswagen App">
+                        <span>My Volkswagen App</span>
                     </a>
                     <a href="#">
-                        <img src="images/gallery2.png" alt="시승신청"><br>
+                        <img src="images/link2.png" alt="온라인 서비스 예약">
+                        <span>온라인 서비스 예약</span>
+                    </a>
+                    <a href="#">
+                        <img src="images/link3.png" alt="사고 수리 온라인 견적">
+                        <span>사고 수리 온라인 견적</span>
+                    </a>
+                    <a href="#">
+                        <img src="images/link4.png" alt="서비스 및 부품">
+                        <span>서비스 및 부품</span>
+                    </a>
+                    <a href="#">
+                        <img src="images/link5.png" alt="시승신청">
                         <span>시승신청</span>
                     </a>
-                    <a href="#">
-                        <img src="images/gallery3.png" alt="서비스센터 찾기"><br>
-                        <span>서비스센터 찾기</span>
-                    </a>
                 </div>
-            </div><!-- .gallery end -->
-        </div><!-- .noga end -->
-
-    </div><!-- .contents end -->
-
-    <!-- footer -->
-    <footer>
-        <div class="blogo">
-            <a href="#"><img src="images/blogo.png" alt="로고"></a>
+                <!-- banner -->
+                <div class="banner">
+                    <div class="cont">
+                        <img src="images/banner.png" alt="배너">
+                        <div>
+                            <h2>폭스바겐 공식 서비스</h2>
+                            <p>저희 공식 서비스는 순정 부품과 제조사 매뉴얼을 통한 수리로 고객님의 폭스바겐을 위한 최적화된 서비스를 제공하고 있습니다. <br> 폭스바겐 맞춤형 부품과 수리로 안전하고
+                                편안한 주행을 즐겨 보십시오.</p>
+                        </div>
+                    </div>
+                    <div class="btn">
+                        <a href="#"><img src="images/button.png" alt="바로가기버튼"></a>
+                    </div>
+                </div>
+                <!-- notice and gallery -->
+                <div class="noga">
+                    <!-- notice -->
+                    <div class="notice">
+                        <h2>공지사항</h2>
+                        <ul>
+                            <li>
+                                <a href="#">Drive the legend. 신형 GTI 출시</a>
+                                <span>2025.05.05</span>
+                            </li>
+                            <li>
+                                <a href="#">폭스바겐 순수 전기 쿠페 SUV 출시</a>
+                                <span>2025.01.05</span>
+                            </li>
+                            <li>
+                                <a href="#">Timeless icon, 새로운 골프 출시</a>
+                                <span>2024.12.05</span>
+                            </li>
+                            <li>
+                                <a href="#">폭스바겐의 첫 번째 순수 전기 SUV</a>
+                                <span>2024.10.05</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- gallery -->
+                    <div class="gallery">
+                        <h2>갤러리</h2>
+                        <div class="inner">
+                            <a href="#">
+                                <img src="images/gallery1.png" alt="전시장 찾기"><br>
+                                <span>전시장 찾기</span>
+                            </a>
+                            <a href="#">
+                                <img src="images/gallery2.png" alt="시승신청"><br>
+                                <span>시승신청</span>
+                            </a>
+                            <a href="#">
+                                <img src="images/gallery3.png" alt="서비스센터 찾기"><br>
+                                <span>서비스센터 찾기</span>
+                            </a>
+                        </div>
+                    </div><!-- .gallery end -->
+                </div><!-- .noga end -->
+            </div><!-- .contents end -->
+            <!-- footer -->
+            <footer>
+                <div class="blogo">
+                    <a href="#"><img src="images/blogo.png" alt="로고"></a>
+                </div>
+                <!-- address and copyright -->
+                <div class="copy">
+                    <p>
+                        <b>강남 대치 전시장</b> 서울특별시 강남구 역삼로 557 T.02-564-9800
+                    </p>
+                    <p>
+                        © Volkswagen 2025
+                    </p>
+                </div>
+                <div class="right">
+                    <!-- family site -->
+                    <div class="fs">
+                        <select name="fs" id="fs">
+                            <option value="">--- 패밀리 사이트 ---</option>
+                            <option value="fs1">서비스센터 찾기</option>
+                            <option value="fs2">개인정보 처리방침</option>
+                            <option value="fs3">시승상담신청</option>
+                        </select>
+                    </div>
+                </div>
+            </footer>
         </div>
-        <!-- address and copyright -->
-        <div class="copy">
-            <p>
-                <b>강남 대치 전시장</b> 서울특별시 강남구 역삼로 557 T.02-564-9800
-            </p>
-            <p>
-                © Volkswagen 2025
-            </p>
-        </div>
-
-        <div class="right">
-            <!-- family site -->
-            <div class="fs">
-                <select name="fs" id="fs">
-                    <option value="">--- 패밀리 사이트 ---</option>
-                    <option value="fs1">서비스센터 찾기</option>
-                    <option value="fs2">개인정보 처리방침</option>
-                    <option value="fs3">시승상담신청</option>
-                </select>
+        <div class="modal">
+            <div class="popup">
+                <h3>Drive the legend. The new Golf GTI.</h3>
+                <p>해치백의 리빙 레전드, The new Golf GTI의 외관 디자인은 그 자체로 유니크합니다. GTI의 상징인 레드 스트립과 GTI 엠블럼에 라디에이터 그릴 라이팅과 일루미네이티드 로고가
+                    새롭게 더해져, 도로 위에서 더욱 선명하고 강렬한 인상을 남깁니다. GTI의 헤리티지를 이어가는 허니컴 그릴 에어 인테이크는 독창적인 전면 디자인을 구현하며, 새롭게 적용된 19인치
+                    퀸스타운 알로이 휠과 강렬한 레드 브레이크 캘리퍼는 GTI의 스포츠카 DNA를 분명히 보여줍니다. 이 모든 요소들이 완벽하게 조화를 이루며, The new Golf GTI는 비교할 수
+                    없는 고성능 퍼포먼스 해치백의 매력을 완성합니다.</p>
+                <div><a href="#">&times; 닫기</a></div>
             </div>
-        </div>
-    </footer>
-    <div class="modal">
-        <div class="popup">
-            <h3>Drive the legend. The new Golf GTI.</h3>
-            <p>해치백의 리빙 레전드, The new Golf GTI의 외관 디자인은 그 자체로 유니크합니다. GTI의 상징인 레드 스트립과 GTI 엠블럼에 라디에이터 그릴 라이팅과 일루미네이티드 로고가
-                새롭게 더해져, 도로 위에서 더욱 선명하고 강렬한 인상을 남깁니다. GTI의 헤리티지를 이어가는 허니컴 그릴 에어 인테이크는 독창적인 전면 디자인을 구현하며, 새롭게 적용된 19인치
-                퀸스타운 알로이 휠과 강렬한 레드 브레이크 캘리퍼는 GTI의 스포츠카 DNA를 분명히 보여줍니다. 이 모든 요소들이 완벽하게 조화를 이루며, The new Golf GTI는 비교할 수
-                없는 고성능 퍼포먼스 해치백의 매력을 완성합니다.</p>
-            <div><a href="#">&times; 닫기</a></div>
         </div>
     </div>
 </body>
