--- a/70_pf/dothome/kyowontour/index.html
+++ b/70_pf/dothome/kyowontour/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="./script/jquery-3.7.1.js"></script>
     <script src="./script/script.js"></script>
-
 </head>
 
 <body>
@@ -67,7 +66,7 @@
                     • 타인이 대신하여 신청 가능합니다.<br>
                     • 0세 ~ 성인 모두 예외 없이 TDAC 접수를 해주셔야 합니다.
                 </p>
-                <div><a href="#">&times; 닫기</a></div>
+                <div><button type="button">&times; 닫기</button></div>
             </div>
         </div><!-- .//modal end -->
         
