--- a/70_pf/dothome/haeundae/index.html
+++ b/70_pf/dothome/haeundae/index.html
@@ -51,10 +51,9 @@
             <!-- 슬라이드 -->
             <div class="slide">
                 <ul>
-                    <li><a href="#"><img src="images/slide1.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/slide2.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/slide3.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/slide1.png" alt=""></a></li>
+                    <li><a href="#"><img src="images/slide1.png" alt="갤러리1"></a></li>
+                    <li><a href="#"><img src="images/slide2.png" alt="갤러리2"></a></li>
+                    <li><a href="#"><img src="images/slide3.png" alt="갤러리3"></a></li>
                 </ul>
             </div><!-- .slide end -->
             <!-- 콘텐츠 -->
