--- a/70_pf/dothome/volkswagen/index.html
+++ b/70_pf/dothome/volkswagen/index.html
@@ -187,7 +187,7 @@
                     새롭게 더해져, 도로 위에서 더욱 선명하고 강렬한 인상을 남깁니다. GTI의 헤리티지를 이어가는 허니컴 그릴 에어 인테이크는 독창적인 전면 디자인을 구현하며, 새롭게 적용된 19인치
                     퀸스타운 알로이 휠과 강렬한 레드 브레이크 캘리퍼는 GTI의 스포츠카 DNA를 분명히 보여줍니다. 이 모든 요소들이 완벽하게 조화를 이루며, The new Golf GTI는 비교할 수
                     없는 고성능 퍼포먼스 해치백의 매력을 완성합니다.</p>
-                <div><a href="#">&times; 닫기</a></div>
+                <div class="button"><button type="button">&times; 닫기</button></div>
             </div>
         </div>
     </div>
