--- a/70_pf/dothome/karts/index.html
+++ b/70_pf/dothome/karts/index.html
@@ -210,7 +210,7 @@
                 주둔해 있는 폴란드 군대에게 자신들의 메시지를 전해줄 특사가 필요했습니다. 이때, 터키어와 아랍어에 능통한 프란츠 조지 콜시츠키(Franz George Kolshitsky)가 터키군으로
                 위장하여 이 일을 수행하기로 합니다. 위험천만한 위기의 순간을 여러 번 넘긴 후 마침내 콜시츠키는 모든 임무를 용맹하게 완수해내고, 곧 다가올 폴란드의 지원 소식을 비엔나에 다시 전하게
                 됩니다.</p>
-            <div><a href="#">&times; 닫기</a></div>
+            <div class="button"><button type="button">&times; 닫기</button></div>
         </div>
     </div>
 </body>
