--- a/06_jq/01_first().html
+++ b/06_jq/01_first().html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fisrt()</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -14,8 +16,15 @@
         <li>오렌지</li>
     </ul>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
+        /* 
+            탐색 메서드
+            first(): 첫 번째 메서드 선택
+            last(): 마지막 요소 선택
+        
+        
+        */
+
         $(function(){
             // ul의 첫번째 li 선택
             //$('ul li:first-child').css({color:'red'});
