--- a/70_pf/dothome/daewooenc/index.html
+++ b/70_pf/dothome/daewooenc/index.html
@@ -58,12 +58,11 @@
             </nav>
         </header>
         <!-- B: slide -->
-        <div class="slide">
+        <div id="slider">
             <ul>
                 <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
                 <li><a href="#"><img src="images/slide2.png" alt="슬라이드이미지2"></a></li>
                 <li><a href="#"><img src="images/slide3.png" alt="슬라이드이미지3"></a></li>
-                <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
             </ul>
         </div>
         <!-- 팝업창 -->
