--- a/70_pf/dothome/haeundae copy/index copy.html
+++ b/70_pf/dothome/haeundae copy/index copy.html
@@ -59,8 +59,8 @@
             <div class="contents">
                 <div class="tabs">
                     <span class="btn">
-                        <a href="#tab1" class="active">공지사항</a>
-                        <a href="#tab2">갤러리</a>
+                        <a href="#" class="active">공지사항</a>
+                        <a href="#">갤러리</a>
                     </span>
 
                     <!-- 공지사항 -->
