--- a/70_pf/dothome/kyowontour/index.html
+++ b/70_pf/dothome/kyowontour/index.html
@@ -140,12 +140,12 @@
             </div><!-- .//link end -->
         </div><!-- .contents end -->
         <!-- 슬라이드 -->
-        <div class="slide">
+        <div id="slider">
             <ul>
                 <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
                 <li><a href="#"><img src="images/slide2.png" alt="슬라이드이미지2"></a></li>
                 <li><a href="#"><img src="images/slide3.png" alt="슬라이드이미지3"></a></li>
-                <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
+                <!-- <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li> -->
             </ul>
         </div>
     </div><!-- //.wrap end -->
