--- a/70_pf/dothome/kyowontour/slidejs3.html
+++ b/70_pf/dothome/kyowontour/slidejs3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>페이드 슬라이드 이미지</title>
+    <title>페이드 슬라이드 이미지 농심jq</title>
     <style>
         #slider {
             width: 300px;
